# rdos

./: Cargo.toml  README.md  lefthook.yml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  serial.rs  vga.rs
tests/: basic_boot.rs  should_panic.rs
