[package]
name = "rdos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
spin = "0.10.0"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]
panic = "abort"

[[bin]]
name = "rdos"
test = true
bench = false


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
